MonetDB5/tests/BugReports/Tests/no.166.mal
# Monet Mil to Mal compiler
# Copyright (c) 2001-2004, CWI. All rights reserved.

#Predefined code segment
#The compiler can not guarantee an accurate compilation,
#because MIL unlike MAL is a dynamically typed language.
#A few guidelines to maximize usefullness.
#- make the type of variables explicit, in particular 'nil'
#- upon advice of M2m to remap identifiers, change it in your program directly
#include "mil_prelude";
	mil.line("# >Number:         166\n");
	mil.line("# >Number:         166");
	mil.line("# >Category:       MIL\n");
	mil.line("# >Category:       MIL");
	mil.line("# >Synopsis:       loading module enum in a block, proc or batloop fails\n");
	mil.line("# >Synopsis:       loading module enum in a block, proc or batloop fails");
	mil.line("# >Confidential:   no\n");
	mil.line("# >Confidential:   no");
	mil.line("# >Severity:       serious\n");
	mil.line("# >Severity:       serious");
	mil.line("# >Priority:       medium\n");
	mil.line("# >Priority:       medium");
	mil.line("# >Responsible:    boncz (Peter Boncz)\n");
	mil.line("# >Responsible:    boncz (Peter Boncz)");
	mil.line("# >State:          open\n");
	mil.line("# >State:          open");
	mil.line("# >Class:          sw-bug\n");
	mil.line("# >Class:          sw-bug");
	mil.line("# >Submitter-Id:   unknown\n");
	mil.line("# >Submitter-Id:   unknown");
	mil.line("# >Arrival-Date:   Thu Aug 13 17:51:39 1998\n");
	mil.line("# >Arrival-Date:   Thu Aug 13 17:51:39 1998");
	mil.line("# >Originator:     manegold@cwi.nl\n");
	mil.line("# >Originator:     manegold@cwi.nl");
	mil.line("# >Organization:\n");
	mil.line("# >Organization:");
	mil.line("# CWI\n");
	mil.line("# CWI");
	mil.line("# >Release:        980101\n");
	mil.line("# >Release:        980101");
	mil.line("# >Environment:\n");
	mil.line("# >Environment:");
	mil.line("# any\n");
	mil.line("# any");
	mil.line("# >Description:\n");
	mil.line("# >Description:");
	mil.line("# loading module enum in a block, proc or batloop\n");
	mil.line("# loading module enum in a block, proc or batloop");
	mil.line("# stops the evaluation of the very block immediately.\n");
	mil.line("# stops the evaluation of the very block immediately.");
	mil.line("#\n");
	mil.line("#");
	mil.line("# ========\n");
	mil.line("# ========");
	mil.line("# test script\n");
	mil.line("# test script");
	mil.line("# --------\n");
	mil.line("# --------");
	mil.line("# loaded;\n");
	mil.line("# loaded;");
	mil.line("#\n");
	mil.line("#");
	mil.line("# {\n");
	mil.line("# {");
	mil.line("# printf(\"\\nloading '%s' ... \",\"enum\");\n");
	mil.line("# printf(\"\\nloading '%s' ... \",\"enum\");");
	mil.line("# module(\"enum\");\n");
	mil.line("# module(\"enum\");");
	mil.line("# printf(\"done.\\n\\n\");\n");
	mil.line("# printf(\"done.\\n\\n\");");
	mil.line("# loaded;\n");
	mil.line("# loaded;");
	mil.line("# printf(\"\\ndropping '%s' ... \",\"enum\");\n");
	mil.line("# printf(\"\\ndropping '%s' ... \",\"enum\");");
	mil.line("# drop(\"enum\");\n");
	mil.line("# drop(\"enum\");");
	mil.line("# printf(\"done.\\n\\n\");\n");
	mil.line("# printf(\"done.\\n\\n\");");
	mil.line("# loaded;\n");
	mil.line("# loaded;");
	mil.line("# }\n");
	mil.line("# }");
	mil.line("#\n");
	mil.line("#");
	mil.line("# quit;\n");
	mil.line("# quit;");
	mil.line("#\n");
	mil.line("#");
	mil.line("# ========\n");
	mil.line("# ========");
	mil.line("# output\n");
	mil.line("# output");
	mil.line("# --------\n");
	mil.line("# --------");
	mil.line("# loaded;\n");
	mil.line("# loaded;");
	mil.line("# #---------------------------------#\n");
	mil.line("# #---------------------------------#");
	mil.line("# # module        | usage_count     #\n");
	mil.line("# # module        | usage_count     #");
	mil.line("# #---------------------------------#\n");
	mil.line("# #---------------------------------#");
	mil.line("# [ \"kernel\",       1               ]\n");
	mil.line("# [ \"kernel\",       1               ]");
	mil.line("# [ \"arith\",        1               ]\n");
	mil.line("# [ \"arith\",        1               ]");
	mil.line("# [ \"bat\",          1               ]\n");
	mil.line("# [ \"bat\",          1               ]");
	mil.line("# [ \"algebra\",      1               ]\n");
	mil.line("# [ \"algebra\",      1               ]");
	mil.line("# [ \"sys\",          1               ]\n");
	mil.line("# [ \"sys\",          1               ]");
	mil.line("# [ \"trans\",        1               ]\n");
	mil.line("# [ \"trans\",        1               ]");
	mil.line("#\n");
	mil.line("#");
	mil.line("# {\n");
	mil.line("# {");
	mil.line("# printf(\"\\nloading '%s' ... \",\"enum\");\n");
	mil.line("# printf(\"\\nloading '%s' ... \",\"enum\");");
	mil.line("# module(\"enum\");\n");
	mil.line("# module(\"enum\");");
	mil.line("# printf(\"done.\\n\\n\");\n");
	mil.line("# printf(\"done.\\n\\n\");");
	mil.line("# loaded;\n");
	mil.line("# loaded;");
	mil.line("# printf(\"\\ndropping '%s' ... \",\"enum\");\n");
	mil.line("# printf(\"\\ndropping '%s' ... \",\"enum\");");
	mil.line("# drop(\"enum\");\n");
	mil.line("# drop(\"enum\");");
	mil.line("# printf(\"done.\\n\\n\");\n");
	mil.line("# printf(\"done.\\n\\n\");");
	mil.line("# loaded;\n");
	mil.line("# loaded;");
	mil.line("# }\n");
	mil.line("# }");
	mil.line("#\n");
	mil.line("#");
	mil.line("# loading 'enum' ... \n");
	mil.line("# loading 'enum' ... ");
	mil.line("# quit;\n");
	mil.line("# quit;");
	mil.line("#\n");
	mil.line("#");
	mil.line("# --------\n");
	mil.line("# --------");
	mil.line("");
	aa_a := oid(20000000);
	ba_a := setoid(aa_a);
	mil.line("");
	ca_a := loaded();
	mil.line("{");
	da_a := printf("\nloading '%s' ... ","enum");
!ERROR: "printf("\nloading '%%s' ... ","enum");"
!                                                     ^
! syntax error, unexpected TOK_MODULE.
